--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -9,6 +9,7 @@
     <!-- Аутентификация в Яндекс Вебмастер -->
     <meta name="yandex-verification" content="c3f40ad459bc9654"/>
 
+    <link rel="stylesheet" href="{% static 'css/post.css' %}">
     <link rel="stylesheet" href="{% static 'css/post_list.css' %}">
     <link rel="stylesheet" href="{% static 'css/modal_image.css' %}">
 
