Подключить забытые стили на страницу поиска

--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block head %}
+    <link rel="stylesheet" href="{% static 'css/post.css' %}">
     <link rel="stylesheet" href="{% static 'css/post_list.css' %}">
 {% endblock %}
 
