Добавить иконку к ссылке на официальный сайт

--- a/cloud/templates/structure/university_page.html
+++ b/cloud/templates/structure/university_page.html
@@ -15,7 +15,10 @@
                 </div>
                 <div class="col-xs-7 col-sm-9 col-md-9 col-lg-9">
                     <h3 style="word-wrap: break-word">{{ univer.title }}</h3>
-                    <a href="{{ univer.link }}"> официальный сайт </a>
+                    <a href="{{ univer.link }}">
+                        <span aria-hidden="true" class="glyphicon glyphicon-link"></span>
+                        официальный сайт
+                    </a>
                 </div>
             </div>
 
