Повысить доступность постов для инвалидов

--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -41,7 +41,10 @@
                 <span class="icon-bar"></span>
             </button>
             <a id="menu-brand" class="navbar-brand" href="{% url 'index' %}">
-                <object id="picloud-logo" data="{% static 'img/logo.svg' %}" type="image/svg+xml">
+                <object aria-label="Главная страница PiCloud"
+                        id="picloud-logo"
+                        data="{% static 'img/logo.svg' %}"
+                        type="image/svg+xml">
                     <img src="{% static 'img/piLogo.png' %}" alt="PiCloud">
                 </object>
             </a>
