--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -55,7 +55,7 @@
                 {% if user.is_authenticated %}
                     <li>
                         <a href="{% url 'settings' %}">
-                            <div id="avatar" style="background-image: url({{ request.session.user_ava_url }})"></div>
+                            <div id="avatar" style="background-image: url({{ request.session.user_avatar_url }})"></div>
                             <h3 style="margin: 0;">{{ user.username }}</h3>
                         </a>
                     </li>
