Показывать полное название предмета при наведении

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -31,7 +31,7 @@
             <p class="subject">
                 <span class="type">{{ post.type.title }}</span>
                 |
-                <a class="subject"
+                <a class="subject" title="{{ post.subject.title }}"
                    href="/subject/{{ post.subject.pk }}">{{ post.subject.short_title }}</a>
             </p>
         </header>
