Добавлены ссылки на добавление подразделений в настройках

--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -82,7 +82,7 @@
                         <td>{{ user_info.program.chair.title }}</td>
                     </tr>
                     <tr>
-                        <th scope="row">Специальность:</th>
+                        <th scope="row">Программа обучения:</th>
                         <td>{{ user_info.program.title }}</td>
                     </tr>
                     <tr>
@@ -172,23 +172,51 @@
                     <div id="structure" class="collapse">
                         <div class="form-group django-control">
                             <label class="col-form-label">Университет</label>
-                            <select name="university" id="id_university"></select>
+                            <div class="input-group">
+                                <select name="university" id="id_university"></select>
+                                <div class="input-group-btn">
+                                    <a href="{% url 'new_university' %}" class="btn btn-primary ">
+                                        <span class="showopacity glyphicon glyphicon-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="form-group django-control">
                             <label class="col-form-label">Факультет</label>
-                            <select name="department" id="id_department"></select>
+                            <div class="input-group">
+                                <select name="department" id="id_department"></select>
+                                <div class="input-group-btn">
+                                    <a href="{% url 'new_department' %}" class="btn btn-primary ">
+                                        <span class="showopacity glyphicon glyphicon-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="form-group django-control">
                             <label class="col-form-label">Кафедра</label>
-                            <select name="chair" id="id_chair"></select>
+                            <div class="input-group">
+                                <select name="chair" id="id_chair"></select>
+                                <div class="input-group-btn">
+                                    <a href="{% url 'new_chair' %}" class="btn btn-primary ">
+                                        <span class="showopacity glyphicon glyphicon-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
                     <div class="form-group django-control">
                         <label class="col-form-label">Программа обучения</label>
-                        {{ change_user_info_form.program }}
+                        <div class="input-group">
+                            {{ change_user_info_form.program }}
+                            <div class="input-group-btn">
+                                <a href="{% url 'new_program' %}" class="btn btn-primary ">
+                                    <span class="showopacity glyphicon glyphicon-plus"></span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group django-control">
