Назначить атрибуты for всем label'ам в форме

--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -27,22 +27,22 @@
                     </div>
                     <div id="structure" class="collapse">
                         <div class="form-group django-control">
-                            <label class="col-form-label">Университет</label>
+                            <label for="id_university" class="col-form-label">Университет</label>
                             <select name="university" id="id_university"></select>
                         </div>
 
                         <div class="form-group django-control">
-                            <label class="col-form-label">Факультет</label>
+                            <label for="id_department" class="col-form-label">Факультет</label>
                             <select name="department" id="id_department"></select>
                         </div>
 
                         <div class="form-group django-control">
-                            <label class="col-form-label">Кафедра</label>
+                            <label for="id_chair" class="col-form-label">Кафедра</label>
                             <select name="chair" id="id_chair"></select>
                         </div>
 
                         <div class="form-group django-control">
-                            <label class="col-form-label">Программа обучения</label>
+                            <label for="id_program" class="col-form-label">Программа обучения</label>
                             <select name="program" id="id_program"></select>
                         </div>
                     </div>
