Ссылки на добавление подразделений в разделе редактирования поста

--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -26,31 +26,68 @@
                         </div>
                     </div>
                     <div id="structure" class="collapse">
+
                         <div class="form-group django-control">
                             <label for="id_university" class="col-form-label">Университет</label>
-                            <select name="university" id="id_university"></select>
+                            <div class="input-group">
+                                <select name="university" id="id_university"></select>
+                                <div class="input-group-btn">
+                                    <a href="{% url 'new_university' %}" class="btn btn-primary ">
+                                        <span class="showopacity glyphicon glyphicon-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="form-group django-control">
                             <label for="id_department" class="col-form-label">Факультет</label>
-                            <select name="department" id="id_department"></select>
+                            <div class="input-group">
+                                <select name="department" id="id_department"></select>
+                                <div class="input-group-btn">
+                                    <a href="{% url 'new_department' %}" class="btn btn-primary ">
+                                        <span class="showopacity glyphicon glyphicon-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="form-group django-control">
                             <label for="id_chair" class="col-form-label">Кафедра</label>
-                            <select name="chair" id="id_chair"></select>
+                            <div class="input-group">
+                                <select name="chair" id="id_chair"></select>
+                                <div class="input-group-btn">
+                                    <a href="{% url 'new_chair' %}" class="btn btn-primary ">
+                                        <span class="showopacity glyphicon glyphicon-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="form-group django-control">
                             <label for="id_program" class="col-form-label">Программа обучения</label>
-                            <select name="program" id="id_program"></select>
+                            <div class="input-group">
+                                <select name="program" id="id_program"></select>
+                                <div class="input-group-btn">
+                                    <a href="{% url 'new_program' %}" class="btn btn-primary ">
+                                        <span class="showopacity glyphicon glyphicon-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
 
                     <div class="form-group django-control">
                         <label>Предмет</label>
-                        {{ form.subject }}
+
+                        <div class="input-group">
+                            {{ form.subject }}
+                            <div class="input-group-btn">
+                                <a href="{% url 'new_subject' %}" class="btn btn-primary ">
+                                    <span class="showopacity glyphicon glyphicon-plus"></span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group django-control">
