Изменен информационный alert на странице регистрации

--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -83,12 +83,14 @@
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
+                <div class="alert alert-info alert-dismissible show" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Закрыть">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    Следующие поля НЕ обязательны для заполнения. <br>
+                    Вы сможете отредактировать их после регистрации.
+                </div>
                 <div class="container-fluid sign-form">
-                    <label>
-                        Вы можете заполнить дополнительную информацию о себе,
-                        которая будет использована для персонализации контента
-                    </label>
-                    <hr>
 
                     <div class="form-group">
                         <label for="first-name" class="col-form-label">Имя</label>
