Переименовать semestr в semester
Орфография.

--- a/cloud/templates/cloud/structure.html
+++ b/cloud/templates/cloud/structure.html
@@ -60,10 +60,10 @@
                     <td>{{ structure.code }}</td>
                 </tr>
             {% endif %}
-            {% if structure.semestr %}
+            {% if structure.semester %}
                 <tr>
                     <td><b>Семестр</b></td>
-                    <td>{{ structure.semestr }}</td>
+                    <td>{{ structure.semester }}</td>
                 </tr>
             {% endif %}
 
