--- a/cloud/templates/structure/new/subject.html
+++ b/cloud/templates/structure/new/subject.html
@@ -28,7 +28,7 @@
 
         <div class="form-group django-control">
             <label class="col-form-label">Семестр</label>
-            {{ new_subject.semestr }}
+            {{ new_subject.semester }}
         </div>
 
         <hr>
