--- a/cloud/templates/structure/subject_page.html
+++ b/cloud/templates/structure/subject_page.html
@@ -18,8 +18,8 @@
                 {% if subject.lecturer != none %}
                     <h5>Лектор — {{ subject.lecturer }}</h5>
                 {% endif %}
-                {% if subject.semestr != 0 %}
-                    <h5> Семестр {{ subject.semestr }}</h5>
+                {% if subject.semester != 0 %}
+                    <h5> Семестр {{ subject.semester }}</h5>
                 {% else %}
                     <h5> Глобальные материалы</h5>
                 {% endif %}
