--- a/cloud/templates/structure/program_page.html
+++ b/cloud/templates/structure/program_page.html
@@ -29,15 +29,15 @@
                 <hr>
 
 
-                {% for semestr in semesters %}
-                    {% if semestr != 0 %}
-                        <h4> Семестр {{ semestr }}:</h4>
+                {% for semester in semesters %}
+                    {% if semester != 0 %}
+                        <h4> Семестр {{ semester }}:</h4>
                     {% else %}
                         <h4> Глобальные материалы:</h4>
                     {% endif %}
 
                     {% for subject in subjects %}
-                        {% if subject.semestr == semestr %}
+                        {% if subject.semester == semester %}
                             <a href="/subject/{{ subject.pk }}"><h4>{{ subject.title }}</h4></a>
                         {% endif %}
                     {% endfor %}
