Не загружать страницу дважды
Допустил ошибку, когда указал путь ‘#’ в элементе img#modalImg.

--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -40,7 +40,8 @@
 
     <div id="modal">
         <span class="close">&times;</span>
-        <img class="modal-content" id="modalImg" src="#">
+        {# Загружает GIF-изображение размером 1×1 пиксел. #}
+        <img class="modal-content" id="modalImg" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">
         <a id="show-full-btn" href="#" target="_blank" class="btn btn-primary">
             Открыть оригинал в новой вкладке
         </a>
